--- a/index.html
+++ b/index.html
@@ -4695,7 +4695,7 @@ function downloadScheduleTemplate() {
   'Rachel Zane,2025-11-30,22:00,2025-12-01,07:00,Present,use the formula in the cell above and place a (") after .com',
   
   // Canceled Day Off (Triple Paid) - Must have times
-  'Mike Ross,2025-11-30,10:00,2025-11-30,19:00,Cancel Day Off,mike.ross@konecta.com',
+  'Mike Ross,2025-11-30,10:00,2025-11-30,19:00,Cancel Day Off,please make sure in the days off to tpe Day Off and for the annuals casuals  and sick to be submitted from the leave request tab in kompass',
   
   // Overnight Shift
   'Jane Smith,2025-11-30,,2025-11-30,,Day Off,jane.smith@konecta.com'
